--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -14,16 +14,25 @@ body {
     padding:0;
     /**/
 }
+i{
+    color:black;
+}
+i:hover{
+    color:rgb(55, 156, 55);
+    cursor:pointer;
+}
 /* */
-header{
+#header--header{
     /* border:2px solid red; */
     /* background-color: white; */
     /**/
     display:flex;
     flex-direction: column;
     align-items: center;
+    z-index:99;
     /**/
     background: linear-gradient(to top right,blue, 8%, white, 90%, red);
+    box-shadow: 1px 5px 10px white;
 }
 .container--nav{
     /* border:3px solid yellow; */
@@ -188,7 +197,7 @@ header{
     padding: 20px;
     box-shadow: inset 
     0 -3em 3em rgba(0,0,0,0.1),
-    0 0  0 2px rgb(255,255,255),
+    0 0  0 1px rgb(255,255,255),
     0.3em 0.3em 1em rgba(0,0,0,0.3);
     border-radius: 3px;
 }
@@ -255,6 +264,40 @@ header{
     box-shadow: 2px 2px 0.25em red;
     border-radius: 50%;
 }
+
+
+
+
+/**
+ *   Homepage TWIG file stylesheet
+ */
+ #driverspresentation--banner{
+    position: relative;
+    /**/
+    display: flex;
+    flex-direction: column;
+    /**/
+    background-image:url('../images/pilotes-motogp-2020.png') ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    /**/
+    min-height: 400px;
+    /**/
+    justify-content: center;
+    align-items: center;
+}
+#driverspresentation--banner>h1{
+    color:white;
+    font-weight: bolder;
+    text-shadow: 5px 5px 0.25em blue;
+    justify-self: center;
+}
+
+
+
+
+
 
 
 /* *** */
