--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                     <img class="nav--logo" src="{{ asset(sFaviconFullname) }}" alt="logo centrale d'appels"></img>
                     <div id="nav--words">
                         <h2 class="nav--words-h2 m-2">2Wheels4Motion:</h2>
-                        <h4 class="nav--words-h4 m-2">"Les transferts qui rassurent"</h4>
+                        <h4 class="nav--words-h4 m-2">"Les transferts qui (r)assurent"</h4>
                     </div>
                 </div>
                 <!-- DEBUT Menu de navigation -->
@@ -41,19 +41,19 @@
                     <div class="collapse navbar-collapse nav--menu">
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
-                                Le Taxi-moto
+                                <a class="nav-link" href="{{ path('homepage') }}">Le Taxi-moto</a>
                             </li>
                             <!-- <li class="nav-item dropdown">
                                 Confort & sécurité
                             </li> -->
                             <li class="nav-item dropdown">
-                                Tarification
+                                <a class="nav-link" href="">Tarification</a>
                             </li>
                             <li class="nav-item dropdown">
-                                Commander une course
+                                <a class="nav-link" href="">Commander une course</a>
                             </li>
                             <li class="nav-item dropdown">
-                                Espace pilotes
+                                <a class="nav-link" href="{{ path('driver_presentation') }}">Espace pilotes</a>
                             </li>
                         </ul>
                     </div>
@@ -65,8 +65,6 @@
         {% block body %}
         
         {% endblock %}
-
-        <div id="uptotop"><a href="#"><i class="ri-arrow-up-line"></i></a></div>
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
