--- a/templates/driver/driverspresentation.html.twig
+++ b/templates/driver/driverspresentation.html.twig
@@ -37,6 +37,8 @@
         inscrivez-vous ici afin d'être référencé et de profiter d'une plus large visibilité.
         Vous recevrez des demandes de courses par courriel, ou pourrez même être directement contacté
         par toute personne consultant cet annuaire dans le but de trouver un taxi-moto.
+        <br>
+        <h5> Plus nous serons de conducteurs référencés, plus la visibilité de cet annuaire et son utilisation pour nous trouver se fera...</h5>
     </p>
     <p>
         (pour vous renseigner à propos de l'immatriculation au répertoire des métiers,
