--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -14,13 +14,13 @@ body {
     padding:0;
     /**/
 }
-i{
+/* i{
     color:black;
-}
-i:hover{
+} */
+/* i:hover{
     color:rgb(55, 156, 55);
     cursor:pointer;
-}
+} */
 /* */
 #header--header{
     /* border:2px solid red; */
@@ -177,6 +177,36 @@ i:hover{
     box-shadow: 2px 2px 0.25em red; */
     border-radius: 10px;
 }
+.btn--blue{
+    display: flex;
+    align-items: center;
+    width:fit-content;
+    /**/
+    color:white;
+    font-weight: bold;
+    /* text-align: center;
+    text-justify: distribute; */
+    /**/
+    background-color: rgba(0, 89, 255, 0.65);
+    box-shadow: 2px 2px 0.25em red;
+    border-radius: 10px;
+}
+.btn--red{
+    display: flex;
+    align-items: center;
+    width:fit-content;
+    /**/
+    color:white;
+    font-weight: bold;
+    /* text-align: center;
+    text-justify: distribute; */
+    /**/
+    background-color: rgba(255, 0, 0, 0.75);
+    box-shadow: 2px 2px 0.25em blue;
+    /* background-color: rgba(0, 89, 255, 0.65);
+    box-shadow: 2px 2px 0.25em red; */
+    border-radius: 10px;
+}
 /* */
 .paragraph--large{
     margin:2.5em;
@@ -193,6 +223,20 @@ i:hover{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    /* */
+    padding: 20px;
+    box-shadow: inset 
+    0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 1px rgb(255,255,255),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
+    border-radius: 3px;
+}
+.card--3D-vertical{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
+    /* align-items: center; */
     /* */
     padding: 20px;
     box-shadow: inset 
@@ -269,9 +313,9 @@ i:hover{
 
 
 /**
- *   Homepage TWIG file stylesheet
+ *   DriversPresentation TWIG file stylesheet
  */
- #driverspresentation--banner{
+#driverspresentation--banner{
     position: relative;
     /**/
     display: flex;
@@ -297,6 +341,41 @@ i:hover{
 
 
 
+/**
+ *   ALL Modal...
+ */
+.modal--big{
+    background:whitesmoke;
+    width:95vw;
+    height:80vh;
+    border-radius:10px;
+    /**/
+    position: fixed;
+    left:2.5vw;
+    bottom:11vh;
+    /**/
+    filter: drop-shadow(0px 2px 5px black);
+    box-shadow: inset 
+    0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 1px rgb(255,255,255),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
+    /**/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /**/
+    overflow: auto;
+    padding: 5%;
+    padding-top: 10%;
+}
+/* .modal--content{
+    border:2px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: auto;
+    padding:5%;
+} */
 
 
 
