--- a/templates/driver/driverspresentation.html.twig
+++ b/templates/driver/driverspresentation.html.twig
@@ -5,26 +5,17 @@
 {% block body %}
 
 <!-- Drivers Presentation banner -->
-<section id="driverspresentation--banner">
-    <H1>L'ESPACE DES PILOTES</H1>
-    <!-- <div class="btn btn--ordering">
-        <a href="#services">Commander une course</a>
-    </div> -->
-    <button class="btn btn--ordering">Commander une course</button>
+<section id="driverspresentation--banner" style="background-image:url({{ asset(sImgPath ~'banner/pilotes-motogp-2020.png') }});">
+    <H1>LE PADDOCK</H1>
+    
+    <a class="btn btn--ordering" href="#services">Commander une course</a>
+    
     <!-- internal page menu, to navigate to ID -->
     <!-- <div id="nav--inpage">
-        <div class="nav--inpage-item">
-            <a href="#section--services">A votre service</a>
-        </div>
-        <div class="nav--inpage-item">
-            <a href="#section--pro">Professionnalisme</a>
-        </div>
-        <div class="nav--inpage-item">
-            <a href="#section--equipments">Les équipements passager</a>
-        </div>
-        <div class="nav--inpage-item">
-            <a href="#section--bikes">Les motos</a>
-        </div>
+        <a href="#section--services">A votre service</a>
+        <a href="#section--pro">Professionnalisme</a>
+        <a href="#section--equipments">Les équipements passager</a>
+        <a href="#section--bikes">Les motos</a>
     </div> -->
     
 </section>
