--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -1,8 +1,7 @@
 {% extends 'base.html.twig' %}
 {% set Title="Accueil" %}
-{% set sImgPath="build/images/" %}
 
-{% block title %}{{ Title }} - {{ parent() }}{% endblock %}
+{% block title %}{{ parent() }} - {{ Title }}{% endblock %}
 
 {% block body %}
     {% for flashError in app.flashes('adding_to_cart') %}
@@ -12,30 +11,22 @@
         <div class="alert alert-success" role="alert">{{ flashError }}</div>
     {% endfor %}
 
-    <!-- Homepage banner -->
-    <section id="homepage--banner">
+    <!-- DEBUT Homepage banner -->
+    <section id="homepage--banner" style="background-image:url({{ asset(sImgPath ~'banner/honda_gl1800_2018_deux_models-750x410.jpg') }});">
         <H1>L'ANNUAIRE DES TAXIS-MOTO DE FRANCE</H1>
-        <!-- <div class="btn btn--ordering">
-            <a href="#services">Commander une course</a>
-        </div> -->
-        <button class="btn btn--ordering">Commander une course</button>
+        
+        <a class="btn btn--ordering" href="#services">Commander une course</a>
+        
         <!-- internal page menu, to navigate to ID -->
         <div id="nav--inpage">
-            <div class="nav--inpage-item">
-                <a href="#section--services">A votre service</a>
-            </div>
-            <div class="nav--inpage-item">
-                <a href="#section--pro">Professionnalisme</a>
-            </div>
-            <div class="nav--inpage-item">
-                <a href="#section--equipments">Les équipements passager</a>
-            </div>
-            <div class="nav--inpage-item">
-                <a href="#section--bikes">Les motos</a>
-            </div>
+            <a class="btn nav--inpage-btn-bgw" href="#section--services">A votre service</a>
+            <a class="btn nav--inpage-btn-bgw" href="#section--pro">Professionnalisme</a>
+            <a class="btn nav--inpage-btn-bgw" href="#section--equipments">Les équipements passager</a>
+            <a class="btn nav--inpage-btn-bgw" href="#section--bikes">Les motos</a>
         </div>
         
     </section>
+    <!-- FIN Homepage banner -->
 
     <!-- Job description & Professionnals listing presentation -->
     <!----------------------------------------------------------->
@@ -49,14 +40,14 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, dolor expedita consequatur quisquam totam molestias sunt ab est nemo deserunt voluptates libero? Quo voluptas magni, id ipsa soluta laborum rem?
                 Totam sunt rerum blanditiis debitis facere! Ex autem quam similique corrupti temporibus vero quae qui repudiandae, nobis distinctio, delectus minima laborum tempora nostrum neque molestiae modi ullam, dolores asperiores id!
             </p>
-            <img class="card--imgsquare" src="{{ asset(sImgPath ~'embouteillage.jpg') }}" alt="Photo d'un embouteillage">
+            <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/embouteillage.jpg') }}" alt="Photo d'un embouteillage">
         </div>
     </section>
     <!-- -->
     <section class="paragraph--large" id="section--pro">
         <h2 class="title--h2" id="pro--title">Des professionnels sur qui compter...</h2>
         <div class="card--3D-horizontal">
-            <img class="card--imgsquare" src="{{ asset(sImgPath ~'Vignette-VMDTR.png') }}" alt="Photo d'une vignette VMDTR">
+            <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/Vignette-VMDTR.png') }}" alt="Photo d'une vignette VMDTR">
             <p class="card--paragraph col-md-12 col-lg-8" id="pro--p">
                 Tous les pilotes référencés sont des auto-entrepreneurs, réunissant toutes les conditions d'exercice de la profession de transport de personne.
                 Cela signifie que tous ont suivi la formation VMDTR, et ont justifié la détention et la validité des documents ci-dessous :
@@ -80,10 +71,10 @@
                 après chaque utilisation.
             </p>
             <div class="card--horizontal">
-                <img class="card--imgsquare" src="{{ asset(sImgPath ~'charlotte.jpg') }}" alt="Photo d'une charlotte">
-                <img class="card--imgsquare" src="{{ asset(sImgPath ~'casque.jpg') }}" alt="Photo d'un casque">
-                <img class="card--imgsquare" src="{{ asset(sImgPath ~'gants.jpg') }}" alt="Photo de gants">
-                <img class="card--imgsquare" src="{{ asset(sImgPath ~'veste-airbag.jpg') }}" alt="Photo d'une veste">
+                <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/charlotte.jpg') }}" alt="Photo d'une charlotte">
+                <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/casque.jpg') }}" alt="Photo d'un casque">
+                <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/gants.jpg') }}" alt="Photo de gants">
+                <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/veste-airbag.jpg') }}" alt="Photo d'une veste">
             </div>
         </div>
     </section>
@@ -99,8 +90,8 @@
                 Toutes les machines proposent une jupes de protection en cas de pluie, et d'un porte-paquet
             </p>
             <div class="card--horizontal">
-                <img class="card--imgrectangular" style="width:340px;" src="{{ asset(sImgPath ~'honda_gl1800_topbox_dct_studio-750x410_grey.jpg') }}" alt="Photo Honda Goldwing">
-                <img class="card--imgrectangular" style="width:275px;" src="{{ asset(sImgPath ~'BMW K1600GTL Exclusive.png') }}" alt="Photo d'un embouteillage">
+                <img class="card--imgrectangular" style="width:340px;" src="{{ asset(sImgPath ~'homepage/honda_gl1800_topbox_dct_studio-750x410_grey.jpg') }}" alt="Photo Honda Goldwing">
+                <img class="card--imgrectangular" style="width:275px;" src="{{ asset(sImgPath ~'homepage/BMW K1600GTL Exclusive.png') }}" alt="Photo d'un embouteillage">
             </div>
         </div>
     </section>
